test_translator/tests/data/checkpoint_2/core/pass/60_tol_flag_basic/solution.py
def approx_pi():
    return 3.14158  # Close but not exact - passes with --tol 0.001
